# rusty-api-maz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  CargoLambda.toml  Makefile  README.md  demo-object.txt  deploy.sh
.cargo/: config.toml
events/: README.md  aws-console-test.json  local-test.json  test-complete.json  test-health.json  test-no-payload.json
src/: lib.rs  main.rs  services.rs
src/application/: service.rs
src/domain/: mocks.rs  mod.rs  models.rs  ports.rs
src/infrastructure/: dynamo.rs  mod.rs  s3.rs
tests/: integration_test.rs
