[package]
name = "rusty-api-maz"
version = "0.1.0"
edition = "2021"
authors = ["malvarezz"]
description = "Rust Lambda API with Hexagonal Architecture - Production ready"

[dependencies]
lambda_runtime = { version = "0.13", features = ["tracing"] }
lambda_http = { version = "0.13", features = ["tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# AWS SDK dependencies
aws-config = "1.5"
aws-sdk-dynamodb = "1.56"
aws-sdk-s3 = "1.63"
aws-sdk-ses = "1.51"
async-trait = "0.1.89"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[lib]
name = "mk_test_lambda"
path = "src/lib.rs"

# Optimizations for AWS Lambda
[profile.release]
opt-level = "z"      # Optimize for size (smaller binary = faster cold starts)
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Better optimization (slower compile, smaller binary)
strip = true          # Strip symbols from binary
panic = "abort"       # Reduce binary size by not including unwinding code
